--- a/src/Ref/SampleReferences.bib
+++ b/src/Ref/SampleReferences.bib
@@ -20,7 +20,7 @@
   organization = {IEEE}
 }
 
-@inproceedings{hammond2011configuring,
+@inproceedings{hammond2011,
   title        = {Configuring kinematically redundant robotic manipulators to increase effective task-specific motion resolution},
   author       = {Hammond, Frank L},
   booktitle    = {2011 IEEE International Conference on Mechatronics and Automation},
@@ -29,7 +29,7 @@
   organization = {IEEE}
 }
 
-@article{Ancona2017,
+@article{ancona2017,
   author    = {Roberto Ancona},
   title     = {Redundancy modelling and resolution for robotic mobile manipulators: a general approach},
   journal   = {Advanced Robotics},
@@ -43,7 +43,7 @@
   eprint    = {https://doi.org/10.1080/01691864.2017.1326842}
 }
 
-@article{Maaroof2022,
+@article{maaroof2022,
   author         = {Maaroof, Omar W. and Dede, Mehmet İsmet Can and Aydin, Levent},
   title          = {A Robot Arm Design Optimization Method by Using a Kinematic Redundancy Resolution Technique},
   journal        = {Robotics},
